--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "gulp",
-    "build": "CI='' && gulp build --build",
+    "build": "gulp build",
     "zip": "gulp deployZIP --build"
   },
   "repository": {
