--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,3 +21,8 @@ jobs:
         with:
           branch: gh-pages
           folder: dist
+           - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.0
+        with:
+          branch: gh-pages
+          folder: dist
